package exercise.p05;

public class DiagonalMoveStrategy extends DirectionsStrategy {

    @Override
    public void move(Ball ball) {

    }

}
