package exercise.p05;

public abstract class DrawStrategy {
    public abstract void draw(Ball ball);
}
