package exercise.p05;

public class VerticalMoveStrategy extends DirectionsStrategy {

    @Override
    public void move(Ball ball) {

    }

}
